@@ -1,4 +1,6 @@
 Changes towards version 0.7:
+- Properly account for simultaneous destruction of last ships
+  in each fleet in Supermelee (bug #437) - Alex
 - Do not match singular stars when given a prefix in star search
   (bug #1071) - Alex
 - Preserve character case when editing with joystick (bug #1080) - Alex
